<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_pin"
        android:title="@string/pin_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/favorite_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_attachment"
        android:icon="@drawable/ic_add_attachment"
        android:title="@string/add_attachment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_note"
        app:showAsAction="never" />
</menu>
