<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_attachment_preview"
        android:scaleType="fitCenter"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/document_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:contentDescription="@string/document_attachment"
        android:padding="@dimen/space_m"
        android:src="@drawable/ic_document" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_indicator"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:contentDescription="@string/loading_attachment"
        android:visibility="gone"
        app:indicatorSize="32dp" />

</FrameLayout>
